# llm_systematic_review

./: .env.example  .gitignore  LICENCE  README.md  REFERENCES_INDEX.md  llm_optimization_paper_search.pages  pyproject.toml  requirements.txt  standard_rag_pipeline.py
data/splits/: eval_query_set.csv  gold_standard_set.csv
docs/: data_private_setup.md  dataset_metadata.md  executive_summary.md  systematic_review_rag_variants_papers.pages
docs/manuscript/: methods_draft.md
docs/manuscript_components/: abstract.md
docs/prisma/: prisma_checklist.md
eval/metrics/: metric_definitions.yaml
eval/schemas/: inclusion_criteria.yaml
experiments/: run_template.json
notebooks/: 01_corpus_preparation.ipynb  02_boolean_search.ipynb  03_standard_rag_pipeline.ipynb  04_agentic_rag_pipeline.ipynb  05_feature_extraction_eval.ipynb  06_method_comparison.ipynb  07_reporting_and_figures.ipynb  08_agentic_niah_stress_test.ipynb
prompts/: prompt_library.csv
references/: systematic_review_rag_llm_papers.pages
search/boolean/: embase_string.txt  ieee_xplore_string.txt  pubmed_string.txt  scopus_string.txt  search_log.md
src/evaluation/: metrics.py
src/extraction/: extractor.py
src/methods/agentic_rag/: agent.py  niah.py
src/methods/boolean_search/: deduplicator.py  fetcher.py
src/methods/standard_rag/: langchain_pipeline.py  pipeline.py
src/utils/: io.py
tools/: watch_repo.sh
